# jcommit

./: Cargo.toml  LICENSE  README.md  jcommit.toml.example
src/: ai.rs  config.rs  git.rs  main.rs
