[package]
name = "jcommit"
version = "0.1.2"
edition = "2021"
authors = ["Race604"]
description = "An AI-powered tool to generate git commit messages"
license = "MIT"
repository = "https://github.com/race604/jcommit"
readme = "README.md"
keywords = ["git", "commit", "ai", "openai", "gpt"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
git2 = "0.18.1"
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
toml = "0.8.8"